--- a/job/api_tracing/api_tracing.conf
+++ b/job/api_tracing/api_tracing.conf
@@ -1,9 +1,9 @@
 {
-    "data_root_path": "/dkucc/home/xz464/Antispoofing",
+    "data_root_path": "/",
     "label_train":"label/train_only_new_label1.txt",
     "label_dev":"label/new_dev_labels1.txt",
     "label_eval":"label/new_eval_labels1.txt",
-    "model_path": "/work/xz464/zxp/new_dataset_experiment_dkucc/aasist-main/job/api_tracing/exp_result/XLSR2_AASIST_api_ep100_bs128/weights/best.pth",
+    "model_path": "exp_result/XLSR2_AASIST_api_ep100_bs128/weights/best.pth",
     "batch_size": 128,
     "num_epochs": 100,
     "loss": "CCE",
